bug fix base name &. scala version